objects/APXTConga4__Conga_Solution_Email_Template__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Comments__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Conga_Email_Template_Group__c</fullName>
        <formula>APXTConga4__Conga_Email_Template__r.APXTConga4__Template_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Email Template Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Conga_Email_Template_Name__c</fullName>
        <formula>APXTConga4__Conga_Email_Template__r.APXTConga4__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Email Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Conga_Email_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Conga Email Template</label>
        <referenceTo>APXTConga4__Conga_Email_Template__c</referenceTo>
        <relationshipLabel>Conga Solution Email Templates</relationshipLabel>
        <relationshipName>Conga_Solution_Email_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Conga_Solution__c</fullName>
        <label>Conga Solution</label>
        <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
        <relationshipLabel>Conga Solution Email Templates</relationshipLabel>
        <relationshipName>Conga_Solution_Email_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APXTConga4__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the value is true, the related email template will be used. Also for one solution, only one record can be IsDefault = true, the others must be IsDefault = false.</description>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <label>Conga Solution Email Template</label>
    <nameField>
        <displayFormat>CSET-{0000}</displayFormat>
        <label>Conga Solution Email Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Solution Email Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>APXTConga4__CET_Count_Validator</fullName>
        <active>false</active>
        <description>Only one CET is allowed per solution</description>
        <errorConditionFormula>APXTConga4__Conga_Solution__r.APXTConga4__CongaEmailTemplateCount__c != 0</errorConditionFormula>
        <errorDisplayField>APXTConga4__Conga_Email_Template__c</errorDisplayField>
        <errorMessage>Only one Conga Email Template is allowed per Conga Solution. To make changes, either modify the existing record or delete it and add a new one.</errorMessage>
    </validationRules>
</CustomObject>